# xcosm

./: .gitignore  CCFParameters_Consolidation_Complete.txt  CONSOLIDATION_SUMMARY.md  Makefile  README.md  RESCOPING_ROADMAP.md  mypy.ini  pyproject.toml  requirements.md
.github/workflows/: ci.yml
ccf_package/: README.md  pyproject.toml
ccf_package/ccf/: __init__.py  analysis.py  bigraph.py  cli.py  curvature.py  observables.py  parameters.py  rewriting.py
ccf_package/examples/: quick_start.py
ccf_package/tests/: __init__.py  test_core.py
data/: DATA_MANIFEST.md  README.md
data/raw/: pantheon_all_high_d.csv  pantheon_all_low_d.csv  pantheon_high_d_population.csv  pantheon_low_d_population.csv  pantheon_plus_raw.txt  pantheon_summary.txt  wd_pulsation_periods_table.csv
data/raw/cmb_s4/: cmb_s4_forecasts.yaml
data/raw/gw_sensitivity/: ET-0000A-18.txt
data/raw/jwst_jades/: jades_transient_survey_summary.yaml  sn2023adsy_data.yaml
data/raw/lhc_data/: README.md  alice_oo_nene_flow_2025.yaml  atlas_oo_quenching_2025.csv  cms_small_system_v2.csv  w_boson_mass_2025.csv
data/raw/nuclear/: mass.mas20
data/raw/pdg_2024/: pdg_2024_summary.yaml
data/raw/planck_2018/: planck_2018_parameters.yaml
data/raw/weak_lensing/: weak_lensing_surveys.yaml
data/references/: references.bib
docs/: COMPREHENSIVE_ROADMAP_2025.md  EPISTEMOLOGICAL_CLASSIFICATION.md  FALSIFICATIONS.md  HYPERGRANULAR_ROADMAP.md  INDEX.md  PHASE_F_FINAL_STATUS.md  PHASE_G_ROADMAP.md  UNIFIED_DOCUMENTATION.md
docs/papers/: AEG_MONOGRAPH_SYNTHESIS.md  APJ_LETTERS_OUTLINE.md  CCF_QPD_UNIFIED_SYNTHESIS.md  CCF_SYNTHESIS.md  COSMOS_APJ_LETTER_DRAFT.md  COSMOS_UNIFIED_TREATISE.md  CRITICAL_AUDIT_SYNTHESIS.md  MASTER_SYNTHESIS.md  NOVEL_CONNECTIONS_SYNTHESIS.md  QPD_MONOGRAPH_CORRECTED.md  SPANDREL_MONOGRAPH.md  SPANDREL_SYNTHESIS_V3.md  UNIFIED_SYNTHESIS_MONOGRAPH.md  ccf_action_principle_proof.tex  ccf_gauge_emergence_proof.tex  h0_data_table.tex  h0_gradient_paper_draft.tex  h0_gradient_supplementary.tex
docs/proposals/: ACCESS_PROPOSAL_DRAFT.md  INCITE_PROPOSAL_DRAFT.md  INCITE_PROPOSAL_OUTLINE.md
docs/reports/: AUDIT_unsolved_equations.md  COMPREHENSIVE_GAP_ANALYSIS.md  COMPUTATIONAL_DEPTH_AUDIT.md  DOUBLE_WASHOUT_ANALYSIS.md  EQUATIONS_WORKTHROUGH.md  EQUATIONS_WORKTHROUGH_PART2.md  EQUATIONS_WORKTHROUGH_PART3.md  EQUATIONS_WORKTHROUGH_PART4.md  EQUATIONS_WORKTHROUGH_PART5.md  EQUATIONS_WORKTHROUGH_PART6.md  EQUATION_AUDIT_AND_RESOLUTION.md  JWST_HIGH_Z_ANALYSIS.md  NEXT_STEPS_EXECUTION.md  PREDICTION_STATUS_2024.md  PROMISING_PREDICTIONS_DEEP_DIVE.md  QPD_CRITICAL_ANALYSIS.md  RED_TEAM_VALIDATION_REPORT.md  RESOLUTION_STATUS.md  RESOLUTION_STATUS_COMPLETE.md  RESOLUTION_STATUS_FINAL.md  SESSION_STATUS_2025-11-29.md
docs/research/: 03fg-like_SNe_turbulent_boundary_analysis.md  BLACK_SWAN_INTEGRATION.md  CCF_CMBS4_Observer_Guide.md  CCF_TECHNICAL_DOCUMENTATION.md  DECEMBER_2025_UPDATE.md  DECIGO_GW_PREDICTIONS.md  DERIVATIONS_DETAILED.md  DESI_RSD_NULL_TEST.md  DESI_numerical_data.md  DESI_phantom_crossing_analysis.md  DESI_testable_predictions.md  EXPERIMENTAL_ROADMAP_2025_2035.md  GAPS_TO_HERO_RUN.md  NEXT_STEPS_COMPREHENSIVE.md  OPEN_RESEARCH_NOVEMBER_2025.md  PANTHEON_BIFURCATION_RESULTS.md  PHANTOM_ARTIFACT_PROOF.md  QUICK_RESULTS.txt  SPANDREL_FRAMEWORK_FINAL.md  SPANDREL_MAGNUM_OPUS.md  SPANDREL_V4_FINAL.md  THEORETICAL_HYPOTHESES.md  UNIFIED_PREDICTION_FRAMEWORK.md  URCA_REYNOLDS_ATTRACTOR.md  agent_analysis_summary.md  spandrel_asteroseismic_framework.md  spandrel_gw_detection_prospects.md  ultra_massive_wd_pulsation_database.md
papers/: .latexmkrc
papers/paper1-spandrel/: README.md
papers/paper1-spandrel/code/: data_loader.py  hierarchical_sn_model.py  host_mass_split_analysis.py  spandrel_likelihood.py
papers/paper1-spandrel/manuscript/: outline.tex  spandrel_refs.bib
papers/paper2-h0-smoothing/: README.md
papers/paper2-h0-smoothing/code/: README.md  h0_smoothing_estimator.py  lcdm_mock_generator.py  run_analysis.py
papers/paper2-h0-smoothing/manuscript/: outline.tex
papers/paper3-ccf-curvature/: README.md
papers/paper3-ccf-curvature/code/: README.md  ccf_divergence_diagnosis.py  or_curvature_baseline.py
papers/paper3-ccf-curvature/manuscript/: outline.tex
papers/umbrella-note/: README.md
papers/umbrella-note/code/: falsification_table.py  hypothesis_matrix.py
papers/umbrella-note/manuscript/: cosmos_program.bib  outline.tex
scripts/: run_density_sweep.py  run_full_analysis.py  run_mcmc_optimized.py
src/cosmos/: __init__.py
src/cosmos/analysis/: alpha_chain_network.py  alternative_mechanisms.py  analyze_pantheon_bifurcation.py  audit_w0_sensitivity.py  ckm_analysis.py  convergence_triangulation.py  cosmology_reassessment.py  derive_5loop_qcd.py  derive_baryon_asymmetry.py  derive_ckm_corrections.py  derive_coarse_graining.py  derive_cosmological_constant.py  derive_cp_violation.py  derive_dark_matter.py  derive_f4_casimir.py  derive_f4_entropy.py  derive_fermion_hierarchy.py  derive_fine_structure.py  derive_gauge_isomorphism.py  derive_gauge_unification.py  derive_gravitational_constant.py  derive_gravitational_tensor.py  derive_higgs_mass.py  derive_holographic_entropy.py  derive_immirzi_parameter.py  derive_inflation.py  derive_inflation_splitting.py  derive_jordan_triple.py  derive_muon_g2.py  derive_neutrino_masses.py  derive_octonion_algebra.py  derive_partition_scaling.py  derive_pmns_matrix.py  derive_projection_uniqueness.py  derive_proton_electron.py  derive_quark_koide.py  derive_strong_cp.py  derive_three_generations.py  derive_triality_equilibrium.py  derive_w0_first_principles.py  (+11 more)
src/cosmos/core/: README_PARAMETERS.md  __init__.py  entropic_cosmology.py  octonion_algebra.py  parameters.py  partition_function.py  qcd_running.py  sign_analysis.py  spacetime_projection.py
src/cosmos/data/: __init__.py  bao.py  base.py  gw_sensitivity.py  lhc.py  pantheon.py
src/xcosm/: __init__.py
src/xcosm_common/: __init__.py  paths.py
tests/: test_expansion_quenching.py  test_planck_units.py  validate_full_chain.py  validate_pantheon_real.py
(+129 files in other folders)
