[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmos"
version = "0.1.0"
description = "A Research Physics Simulatorium"
authors = [{ name = "Eirikr", email = "eirikr@example.com" }]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas"
]

[project.scripts]
cosmos-analysis = "cosmos.scripts.run_full_analysis:main"
