[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xcosm"
version = "0.2.0"
description = "eXceptional COSMological Framework - Algebraic cosmology research simulatorium"
readme = "README.md"
license = {text = "MIT"}
authors = [{ name = "Eirikr", email = "eirikr@example.com" }]
keywords = [
    "cosmology",
    "physics",
    "octonions",
    "jordan-algebra",
    "exceptional-groups",
    "bigraph",
    "dark-energy",
    "supernovae",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "networkx>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]
gpu = [
    "pyobjc-framework-Metal>=9.0.0;sys_platform=='darwin'",
    "pyobjc-framework-MetalPerformanceShaders>=9.0.0;sys_platform=='darwin'",
]
all = ["xcosm[dev,docs,gpu]"]

[project.urls]
Homepage = "https://github.com/eirikr/xcosm"
Documentation = "https://xcosm.readthedocs.io"
Repository = "https://github.com/eirikr/xcosm.git"
Issues = "https://github.com/eirikr/xcosm/issues"

[project.scripts]
xcosm = "xcosm.scripts.run_full_analysis:main"
xcosm-verify = "xcosm.analysis.verify_all_predictions:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xcosm = ["py.typed", "data/**/*"]

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    __pycache__
    | \.git
    | \.pytest_cache
    | legacy
    | output
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    "__pycache__",
    ".git",
    ".pytest_cache",
    "legacy",
    "output",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "E741",   # ambiguous variable name (l, O, I) - common in physics
    "F841",   # unused variable - often intentional in research code
    "B007",   # unused loop control variable
    "B028",   # no-explicit-stacklevel in warnings - acceptable for research
    "B023",   # function-uses-loop-variable - acceptable in research code
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__
"tests/*" = ["F401", "F811"]  # test files have special needs

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
