[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccf-cosmology"
version = "1.0.0"
description = "Computational Cosmogenesis Framework - Emergent spacetime from bigraphical reactive systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CCF Collaboration", email = "ccf@cosmogenesis.org"}
]
keywords = [
    "cosmology",
    "bigraphs",
    "emergent spacetime",
    "hubble tension",
    "dark energy",
    "computational physics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "networkx>=2.6.0",
    "matplotlib>=3.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/ccf-collaboration/ccf-cosmology"
Documentation = "https://ccf-cosmology.readthedocs.io"
Repository = "https://github.com/ccf-collaboration/ccf-cosmology"
Issues = "https://github.com/ccf-collaboration/ccf-cosmology/issues"

[project.scripts]
ccf-simulate = "ccf.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=ccf --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
